--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
-  "short_name": "DCS",
-  "name": "DAX Car Scan",
+  "short_name": "DAX SCAN",
+  "name": "DAX CAR SCAN",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2044/2044431.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#000000",
   "background_color": "#000000"
 }
