--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "DCS",
+  "short_name": "DCS PRO",
   "name": "DAX CAR SCAN",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2044/2044431.png", 
+      "src": "https://cdn-icons-png.flaticon.com/512/3233/3233951.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
