--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
   "name": "DAX CAR SCAN PRO",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2061/2061956.png",
+      "src": "[attachment_0](attachment)",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2061/2061956.png",
+      "src": "[attachment_0](attachment)",
       "type": "image/png",
       "sizes": "192x192"
     }
