--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
   "name": "DAX CAR SCAN PRO",
   "icons": [
     {
-      "src": "[attachment_0](attachment)",
+      "src": "https://lh3.googleusercontent.com/image_generation_content/0",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
     },
     {
-      "src": "[attachment_0](attachment)",
+      "src": "https://lh3.googleusercontent.com/image_generation_content/0",
       "type": "image/png",
       "sizes": "192x192"
     }
