--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
   "short_name": "DCS PRO",
   "name": "DAX CAR SCAN PRO",
+  "description": "Profesionalna dijagnostika za Vgate iCar Pro",
   "icons": [
     {
-      "src": "https://lh3.googleusercontent.com/image_generation_content/0",
+      "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "https://lh3.googleusercontent.com/image_generation_content/0",
+      "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#000000",
-  "background_color": "#000000",
-  "description": "Profesionalni OBD2 dijagnostički alat za Vgate iCar Pro"
+  "background_color": "#000000"
 }
