--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "id": "dcs-pro-v60",
   "short_name": "DCS PRO",
   "name": "DAX CAR SCAN PRO",
   "description": "Profesionalna dijagnostika za Vgate iCar Pro",
@@ -18,6 +19,7 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
+  "display_override": ["window-controls-overlay"],
   "orientation": "portrait",
   "theme_color": "#000000",
   "background_color": "#000000"
