--- a/manifest.json
+++ b/manifest.json
@@ -8,16 +8,10 @@
       "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any"
-    },
-    {
-      "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#000000",
