--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,24 @@
 {
-  "name": "DCS PRO",
-  "short_name": "DCS",
-  "start_url": "/index.html",
+  "name": "DCS PRO v60",
+  "short_name": "DCS PRO",
+  "description": "Profesionalna dijagnostika",
+  "id": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
       "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
