--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DCS PRO v60",
   "short_name": "DCS PRO",
-  "description": "Profesionalna dijagnostika",
+  "description": "Profesionalna dijagnostika sa animiranim interfejsom",
   "id": "index.html",
   "start_url": "./index.html",
   "display": "standalone",
