--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "DCS PRO",
+  "name": "DCS PRO v60",
   "short_name": "DCS PRO",
   "description": "Profesionalna dijagnostika vozila",
-  "id": "/index.html",
-  "start_url": ".",
+  "id": "/",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
@@ -13,13 +13,25 @@
       "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
