--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "DCS PRO v60",
+  "name": "DCS PRO Final",
   "short_name": "DCS PRO",
   "description": "Profesionalna dijagnostika vozila",
   "id": "/",
