--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "DCS PRO v60",
   "short_name": "DCS PRO",
   "description": "Profesionalna dijagnostika vozila",
-  "id": "/",
-  "start_url": ".",
+  "id": ".",
+  "start_url": "/dax_car_scan",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
