--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "name": "DCS PRO v60",
   "short_name": "DCS PRO",
   "description": "Profesionalna dijagnostika vozila",
-  "id": "index.html",
+  "id": ".",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "https://i.ibb.co/Lhb8Y6H/dcs-icon.png",
